--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ _mailinglist
 docs/_build/
 __pycache__
 .env_file
+./venv
+venv/
 
 # Coverage reports
 htmlcov/
@@ -29,3 +31,6 @@ htmlcov/
 .direnv
 
 .github/**
+
+# .env
+.env_file
